--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -3,32 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkout</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <div class="container">
+    <div class="background-motif"></div>
+
+    <div class="checkout-container">
         <h1>Checkout - {{ game }}</h1>
         <p>Silakan isi detail di bawah ini untuk melanjutkan pembelian diamond.</p>
 
         <form action="/checkout" method="POST">
             <input type="hidden" name="game" value="{{ game }}">
 
-            <label for="game_id">ID Game:</label><br>
-            <input type="text" name="game_id" required><br><br>
+            <div class="form-group">
+                <input type="text" name="game_id" id="game_id" required>
+                <label for="game_id">ID Game</label>
+            </div>
 
-            <label for="jumlah">Jumlah Diamond:</label><br>
-            <select name="jumlah">
-                <option value="50">50</option>
-                <option value="100">100</option>
-                <option value="200">200</option>
-            </select><br><br>
+            <div class="form-group">
+                <select name="jumlah" required>
+                    <option disabled selected value="">Pilih Jumlah Diamond</option>
+                    <option value="50">50</option>
+                    <option value="100">100</option>
+                    <option value="200">200</option>
+                </select>
+            </div>
 
-            <label for="metode">Metode Pembayaran:</label><br>
-            <select name="metode">
-                <option value="OVO">OVO</option>
-                <option value="Dana">Dana</option>
-                <option value="Bank Transfer">Bank Transfer</option>
-            </select><br><br>
+            <div class="form-group">
+                <select name="metode" required>
+                    <option disabled selected value="">Pilih Metode Pembayaran</option>
+                    <option value="OVO">OVO</option>
+                    <option value="Dana">Dana</option>
+                    <option value="Bank Transfer">Bank Transfer</option>
+                </select>
+            </div>
 
             <button type="submit">Bayar Sekarang</button>
         </form>
