--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle, #ffeaa7 1px, transparent 1px);
+    background: radial-gradient(circle, #0a0801 1px, transparent 1px);
     background-size: 30px 30px;
     opacity: 0.1;
     z-index: -1;
@@ -188,7 +188,7 @@ h1 {
     position: fixed;
     left: 2%;
     top: 25%;
-    background: #fff5c7;
+    background: #e8c898;
     padding: 10px 20px;
     border-radius: 10px;
     font-size: 1.2rem;
@@ -215,6 +215,7 @@ footer {
 footer {
     margin-bottom: 10px;  /* Adjusted margin to move footer up a bit */
 }
+
 /* === Checkout Page Styling === */
 .checkout-container {
     max-width: 500px;
@@ -366,3 +367,51 @@ button:hover {
     }
 }
 
+/* PROMO SECTION */
+.promo-section {
+    margin-top: 40px;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.promo-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #ff69b4;
+    margin-bottom: 20px;
+}
+
+.promo-card {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    padding: 16px;
+    border-radius: 16px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.promo-card.yellow {
+    background-color: #ffcc80; /* Oranye muda */
+}
+
+.promo-card.pink {
+    background-color: #ffe4ec;
+}
+
+.promo-img {
+    width: 80px;
+    height: 80px;
+    border-radius: 12px;
+    object-fit: cover;
+}
+
+.promo-info h3 {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+}
+
+.promo-info p {
+    font-size: 0.875rem;
+    color: #555;
+}
