--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
 <div class="left-quotes">
   <p>💡 Tips: Jangan top-up saat ngantuk ya~</p>
   <p>💡 Tips: Pastikan saldo cukup sebelum top-up!</p>
-  <p>💡 Tips: Cek promo-promo menarik sebelum melakukan top-up.</p>
+  <p>💡 Tips: Cek promo-promo menarik .</p>
 </div>
 
 <!-- PROMO Section -->
